Edit tweets.css to prevent tweet content from overflowing the container

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -50,6 +50,7 @@
 .tweet > p {
   margin: 0;
   padding: 30px 15px;
+  overflow-wrap: break-word;
 
   font-weight: bold;
 }
